<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">El Cubo 9</string>

    <string name="loading">Cargando</string>

    <string name="login">Inciar Sesión</string>
    <string name="signup">Regístrate</string>
    <string name="elcubo9">elcubo9</string>

    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="orWithEmail">o con email</string>
    <string name="loggingIn">Inciando Sesión</string>
    <string name="logInFailed">Login o Password Inválido</string>

    <string name="title_activity_register">Regístrate</string>
    <string name="confirmPassword">Confirme su Contraseña</string>
    <string name="signme">Registrarme</string>
    <string name="emailInvalid">El email es inválido</string>
    <string name="nameRequired">El nombre está vacio</string>
    <string name="passwordRequired">La contraseña está vacia</string>
    <string name="confirmPasswordInvalid">La confirmación de la contraseña no coincide</string>
    <string name="passwordLength">La contraseña debe tener mínimo 6 caracteres</string>
    <string name="signingIn">Registrando Usuario</string>
    <string name="name">Nombre</string>

    <string name="loginWith">Iniciar Sesión con </string>
    <string name="registerWith">Registrarme con </string>

    <string name="title_activity_intern">Restaurantes</string>
    <string name="loadingIntern">Cargando Restaurantes</string>
    <string name="orderItems">Ordenar Pedido</string>


    <string name="loadingMenu">Cargando Menu</string>

    <string name="quantity">Cantidad</string>
    <string name="additionalInfo">Aclaraciones</string>
    <string name="optional">Opcional</string>
    <string name="select">Seleccione</string>
    <string name="required">Requerido</string>

    <string name="title_activity_order_review">Revisar Orden</string>
    <string name="whatTable">¿En qué mesa estas?</string>
    <string name="order">Ordenar</string>
    <string name="loadingSend">Enviando Orden</string>

    <string name="notTitleOrderReceived">Tu Orden ya está en Preparación</string>
    <string name="notTextOrderReceived">Pronto tendrás tu orden en la mesa</string>
    <string name="notTitleOrderInvalid">Tu Orden es inválida</string>
    <string name="notTextOrderInvalid">Ya el mesero viene a tu mesa</string>

    <string name="title_activity_order_sent">Orden Enviada</string>
    <string name="newOrder">Nueva Orden</string>
    <string name="orderSent">Orden Enviada</string>
    <string name="orderInvalid">Orden INVÁLIDA, ya el mesero viene a tu mesa</string>
    <string name="orderReceived">Tu Orden ya está Recibida y en Preparación</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="hello_world">Hello world!</string>


    <string name="APP_ID">1484928975103569</string>
    <string name="title_activity_associate">Completar el Inicio de Sesión</string>



</resources>
