<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/login"
            android:layout_weight="1.0"
            android:layout_marginRight="1dp"/>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="0.0dip" android:layout_height="fill_parent"
            android:text="@string/signup"
            android:layout_weight="1.0"
            android:layout_marginLeft="1dp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/logo_rectangular"
        android:contentDescription="@string/elcubo9"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
