<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right">

        <TextView
            android:id="@+id/tvMenuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="Menu Title"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_toStartOf="@+id/tvPrice"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/tvPrice"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Price"
            android:id="@+id/tvPrice"
            android:layout_gravity="center_horizontal"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="16dp"
            android:textColor="#000" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Subtitle"
        android:id="@+id/tvMenuSubtitle" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/lQuantity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:id="@+id/tvQuantityLabel"
            android:layout_gravity="center_horizontal"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            android:id="@+id/tvQuantity"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lvAdditionals"
        android:layout_marginTop="1dp">
    </ListView>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="1dp"
        android:id="@+id/lAdditionalInfo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additionalInfo"
            android:id="@+id/tvAdditionalInfoLabel"
            android:layout_gravity="center_horizontal"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optional"
            android:id="@+id/tvAdditionalInfo"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Agregar a mi Pedido"
        android:id="@+id/btnAdd"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>


</LinearLayout>
